Fixed missing background.

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ button {
   padding-top: clamp(30px, 6vh, 60px);
   gap: clamp(8px, 2vh, 20px);
   color: white;
-  background: url("media/img/bk.jpg") no-repeat;
+  background: url("../media/img/bk.jpg") no-repeat;
   background-size: cover;
   background-position: 50% 50%;
   animation: backgroundScroll 60s ease-in-out 1s infinite;
